--- a/config.toml
+++ b/config.toml
@@ -11,4 +11,4 @@ relativeurls = true
   githubName = "gumeo"
   linkedinName = "gudmundur-einarsson-484406a7"
   description = "Machine Learning, Coding and Expat life"
-  #google_analytics = "UA-110075286-1"
+  google_analytics = "UA-110075286-1"
